# routers/middleware/middleware.authentication.js
@@ -1,7 +1,8 @@
 const validator = require('validator');
 const multer = require('multer');
+const logger = require('../../controllers/controller.logger.js');
 
-const __b2cSignupvalidationCheck = function (req, res) {
+const __b2cSignupValidationCheck = function (req, res) {
   const { studentName, schoolName, grade, state, country, email, password } =
     req.body;
 
@@ -40,7 +41,7 @@ const b2cSignupMiddleware = (req, res, next) => {
   if (email && password) {
     if (studentName && schoolName && grade) {
       if (state && country) {
-        const check = __b2cSignupvalidationCheck(req, res);
+        const check = __b2cSignupValidationCheck(req, res);
         if (check) {
           return check;
         }
@@ -58,7 +59,7 @@ const b2cSignupMiddleware = (req, res, next) => {
   }
 };
 
-const __b2bTeacherSignupvalidationCheck = function (req, res) {
+const __b2bTeacherSignupValidationCheck = function (req, res) {
   const { teacherName, schoolName, grade, state, country, email, password } =
     req.body;
 
@@ -96,7 +97,7 @@ const b2bTeacherSignupMiddleware = (req, res, next) => {
   if (email && password) {
     if (teacherName && schoolName && grade) {
       if (state && country) {
-        const check = __b2bTeacherSignupvalidationCheck(req, res);
+        const check = __b2bTeacherSignupValidationCheck(req, res);
         if (check) {
           return check;
         }
@@ -116,8 +117,22 @@ const b2bTeacherSignupMiddleware = (req, res, next) => {
 
 const b2bTeacherUploadCsv = multer({ dest: 'uploads/' });
 
+const adminSignupMiddleware = (req, res, next) => {
+  const { email, password } = req.body;
+  if (email && password) {
+    logger.info('admin Signup Middleware passed...');
+    next();
+  } else {
+    logger.error(JSON.stringify(req.body));
+    res
+      .status(400)
+      .json({ error: 'Email and Password Combination not present.' });
+  }
+};
+
 module.exports = {
   b2cSignupMiddleware,
   b2bTeacherSignupMiddleware,
   b2bTeacherUploadCsv,
+  adminSignupMiddleware,
 };
